# is601-MIDTERM

./: .env.example  .gitignore  .pylintrc  README.md  logging.conf  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
data/: calculations.csv
src/: app.py
src/command/: __init__.py  command.py  command_handler.py
src/command/commands/: __init__.py  add.py  clear_history.py  deletehistory.py  divide.py  exit.py  greet.py  history.py  multiply.py  subtract.py
src/coordination/: calculator.py  operation_executor.py
src/core/: application_context.py  logging.py  logging_configurator.py  logging_decorator.py  operation_registry.py  singleton.py
src/exceptions/: calculation_exceptions.py  repository_exceptions.py
src/model/: calculation.py  calculation_history.py
src/operations/: basic.py
src/persistance/: calculation_history.py  csv_repository.py  memory_repository.py  repository_interface.py
tests/: conftest.py
tests/command/: conftest.py  test_command.py  test_command_handler.py  test_operation_commands.py  test_operation_executor_commands.py
tests/command/history_commands/: conftest.py  test_clear_history.py  test_delete_history.py  test_history_commands.py
tests/core/: test_logging.py
tests/model/: test_calculation.py  test_calculation_history.py  test_calculation_serialization.py
tests/operations/: test_operations.py
tests/persistance/: test_calculation_history.py  test_csv_repository.py  test_memory_repository.py
