[tool.poetry]
name = "is601-midterm"
version = "0.1.0"
description = ""
authors = ["David <drajnoha@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
faker = "^37.0.0"
calculator = "^1.1.0"
pytest = "^8.3.5"
pylint = "^3.3.5"
pytest-pylint = "^0.21.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
